Fix document list layout issue: https://bugzilla.redhat.com/show_bug.cgi?id=908548

--- a/zanata-war/src/main/webapp/stylesheet/zanata.css
+++ b/zanata-war/src/main/webapp/stylesheet/zanata.css
@@ -495,7 +495,7 @@ table.fullwidth {
 }
 
 td.wrapped {
-    word-break: break-word;
+    word-break: break-all;
     word-wrap: break-word;
 }
 
